--- a/css/index.css
+++ b/css/index.css
@@ -74,3 +74,106 @@
  .tri-r{
      right: 0;
  }
+
+.tri-l:hover,.tri-r:hover {
+    background: rgba(0,0,0,.4);
+    color: #fff;
+}
+.news {
+    width: 248px;
+    height: 451px;
+    border: 1px solid #E4E4E4;
+    float: right;
+    margin-top: 12px;
+}
+
+.jd-news {
+    height: 200px;
+    border-bottom: 1px dashed #E4E4E4;  /*虚线*/
+}
+.jd-news .dt, .lifeservi .dt {
+    height: 43px;
+    border-bottom: 1px dotted #E8E8E7; /*点线*/
+    line-height: 43px;
+}
+.jd-news .dt h3 ,.lifeservi .dt h3{
+    float: left;
+    font: 14px/43px "microsoft yahei";
+    color: #666;
+    padding-left: 15px;
+}
+.jd-news .dt a{
+    float: right;
+    font: 13px/43px "宋体";
+    margin-right:15px;
+}
+.jd-news .dd ul {
+    padding: 8px 0 0 15px;
+}
+.jd-news .dd li {
+    line-height: 28px;
+}
+.jd-news .dd li span {
+    font-weight: 700;
+    margin-right: 5px;
+}
+.lifeservi {
+    height:251px;
+    overflow: hidden;
+    width: 248px;
+}
+.lifeservi ul {
+    width: 252px;
+}
+.lifeservi ul li {
+    width: 62px;
+    height: 70px;
+    border: 1px solid #e4e4e4;
+    border-top: 0;
+    float: left;
+    margin-left: -1px;
+}
+.lifeservi  li a{
+    display: block;
+    height: 70px;
+    text-align: center;
+    padding-top: 44px;
+    position: relative;
+}
+.lifeservi  li  i{
+    position: absolute;
+    top:12px;
+    left:18px;
+    width: 25px;
+    height: 25px;
+    background: url(../images/icon_lifeserv.png) no-repeat right top;
+}
+.lifeservi-icon2 a i {
+    background-position: right -25px;
+}
+.lifeservi .song {
+    background: url(../images/song.png) no-repeat right top;
+}
+
+/*11 huodong*/
+.todays {
+    position: relative;
+}
+.night {
+    margin: 10px 0 28px 0;
+}
+.night-r {
+    width:1000px;
+    height: 160px;
+    float: right;
+}
+.night-r ul {
+    width: 500%;
+    _width: 400%;
+}
+.night-r li {
+    float: left;
+    margin-right: 1px;
+}
+
+
