--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,36 @@
     height: 604px;
     background: url("../images/banner.jpg") no-repeat top center;/*top center 让这个背景图片居中对齐*/
 }
+#mask{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,.3);
+    position: fixed;/*---固定屏幕---*/
+    top: 0;
+    left: 0;
+    z-index: 999;
+    display: none;
+}
+#box{
+    width: 400px;
+    height: 200px;
+    background-color: rgb(255,255,255);
+    position: fixed;
+    z-index: 1000;
+    top: 50%;
+    left: 50%;
+    margin: -100px 0 0 -200px;
+    display: none;
+}
+#box span{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    width: 15px;
+    height: 15px;
+    font-size: 15px;
+}
 .main{
     /*height: 800px;*/
     position: relative;
@@ -146,44 +176,9 @@
     left:18px;
     width: 25px;
     height: 25px;
-    background: url(../images/icon_lifeserv.png) no-repeat right top;
+    background: url(../images/icon_lifeserv.png) no-repeat;
 }
-.lifeservi-icon2 a i {
-    background-position: right -25px;
-}
-.lifeservi-icon3 a i {
-    background-position: right -100px;
-}
-.lifeservi-icon4 a i {
-    background-position: right -75px;
-}
-.lifeservi-icon5 a{
-    background: url("../images/song.png") no-repeat right top;
-}
-.lifeservi-icon5 a i {
-    background-position: right -50px;
-}
-.lifeservi-icon6 a i {
-    background-position: right -150px;
-}
-.lifeservi-icon7 a i {
-    background-position: right -125px;
-}
-.lifeservi-icon8 a i {
-    background-position: right -175px;
-}
-.lifeservi-icon9 a i {
-    background-position: right -250px;
-}
-.lifeservi-icon10 a i {
-    background-position: right -275px;
-}
-.lifeservi-icon11 a i {
-    background-position: right -250px;
-}
-.lifeservi-icon12 a i {
-    background-position: right -225px;
-}
+
 .lifeservi .song {
     background: url(../images/song.png) no-repeat right top;
 }
